RESOLVED FIXED257711
bbc.co.uk: Video goes black with only audio playing when exiting PiP mode
https://bugs.webkit.org/show_bug.cgi?id=257711
Summary bbc.co.uk: Video goes black with only audio playing when exiting PiP mode
Jean-Yves Avenard [:jya]
Reported 2023-06-05 06:16:18 PDT
Video visual feed is lost after playing video in full screen to PiP and closing out of PiP mode. Steps to reproduce: 1. Navigate to https://www.bbc.com/reel/video/p0ff9hkw/why-your-life-is-probably-a-simulation 2. Tap play on the video (may have to watch ad) 3. Once video is playing, tap on the full screen icon on video 4. Tap on PiP icon 5. Tap on the PiP icon in the PiP video screen > should exit out of PiP back to original screen 6. Visual feed of video is loss, only audio is playing
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2023-06-05 06:16:33 PDT
Jean-Yves Avenard [:jya]
Comment 2 2023-06-07 07:11:09 PDT
EWS
Comment 3 2023-06-07 21:47:06 PDT
Committed 264974@main (ba3971672860): <https://commits.webkit.org/264974@main> Reviewed commits have been landed. Closing PR #14737 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.